kubes/gluster.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: glusterfs-cluster
  namespace: wwfypc
subsets:
  - addresses:
    - ip: 195.201.58.86
    ports:
    - port: 1
---
apiVersion: v1
kind: Service
metadata:
  name: glusterfs-cluster
  namespace: wwfypc
spec:
  ports:
  - port: 1
