kubes/mysql.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql
  namespace: wwfypc
subsets:
  - addresses:
    - ip: 195.201.58.86
    ports:
    - port: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: wwfypc
spec:
  ports:
  - port: 3306
