kubes/nginx.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: api-test
  namespace: wwfypc
  labels:
    app: wwfypc-test
  annotations:
    ingress.kubernetes.io/referrer-policy: "strict-origin-when-cross-origin"
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
spec:
  rules:
  - host: api.test.wwfypc.fluidmedia.wales
    http:
      paths:
      - path: "/"
        backend:
          serviceName: wwfypc-nginx-test
          servicePort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: wwfypc-nginx-test
  namespace: wwfypc
  labels:
    app: wwfypc-test
    tier: nginx
spec:
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: wwfypc-test
    tier: nginx
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wwfypc-nginx-test
  namespace: wwfypc
spec:
  selector:
    matchLabels:
      app: wwfypc-test
      tier: nginx
  replicas: 3
  template:
    metadata:
      labels:
        app: wwfypc-test
        tier: nginx
    spec:
      volumes:
      - name: gluster
        glusterfs:
          endpoints: glusterfs-cluster
          path: kubes-pv
      containers:
      - name: nginx
        image: evilben/wwfypc-nginx:(hash)
        ports:
        - containerPort: 8000
        imagePullPolicy: Always
        volumeMounts:
        - name: gluster
          mountPath: /src/static
          subPath: wwfypc-test/static
        - name: gluster
          mountPath: /src/media
          subPath: wwfypc-test/media
