kubes/old-site.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: website
  namespace: website
  labels:
    app: website
  annotations:
    ingress.kubernetes.io/referrer-policy: "strict-origin-when-cross-origin"
    ingress.kubernetes.io/browser-xss-filter: "true"
    ingress.kubernetes.io/content-type-nosniff: "true"
spec:
  rules:
  - host: wewillfixyourpc.co.uk
    http: &website_http
      paths:
      - path: "/"
        backend:
          serviceName: old-site
          servicePort: 80
  - host: www.wewillfixyourpc.co.uk
    http: *website_http
  - host: mobile.wewillfixyourpc.co.uk
    http: *website_http
  - host: wewillfixyouripad.co.uk
    http: *website_http
  - host: www.wewillfixyouripad.co.uk
    http: *website_http
  - host: mobile.wewillfixyouripad.co.uk
    http: *website_http
  tls:
  - secretName: main-tls
    hosts:
    - wewillfixyourpc.co.uk
    - www.wewillfixyourpc.co.uk
    - mobile.wewillfixyourpc.co.uk
    - wewillfixyouripad.co.uk
    - www.wewillfixyouripad.co.uk
    - mobile.wewillfixyouripad.co.uk
---
kind: Service
apiVersion: v1
metadata:
  name: old-site
  namespace: website
  labels:
    app: old-site
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  selector:
    app: old-site
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: old-site
  namespace: website
spec:
  selector:
    matchLabels:
      app: old-site
  replicas: 3
  template:
    metadata:
      labels:
        app: old-site
    spec:
      volumes:
      - name: gluster
        glusterfs:
          endpoints: glusterfs-cluster
          path: apps
      containers:
      - name: old-site
        image: evilben/wwfypc-old-site:(hash)
        ports:
        - containerPort: 80
        imagePullPolicy: Always
        volumeMounts:
          - name: gluster
            mountPath: /var/www/html
            subPath: website-old/html
